packages/typ/tests/fixtures/diagnostics/0019_core_apply_non_function_02.ml.infer.expected
File "0019_core_apply_non_function_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0019_core_apply_non_function_02 is not a valid module name.

File "0019_core_apply_non_function_02.ml", line 3, characters 2-6:
3 |   beta 2
      ^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
